# carla-gym

./: .gitignore  README.md  play.py  pyproject.toml
carla_gym/: __init__.py
carla_gym/docs/: leaderboard_integration.md
carla_gym/engine/actors/ego/: handler.py  vehicle.py
carla_gym/engine/actors/ego/reward/: valeo_action.py
carla_gym/engine/actors/ego/terminal/: valeo_no_det_px.py
carla_gym/engine/actors/npc/: vehicle.py  walker.py
carla_gym/engine/actors/scenario_actor/: scenario_actor_handler.py
carla_gym/engine/actors/scenario_actor/agents/utils/: local_planner.py
carla_gym/engine/navigation/: global_route_planner.py  local_planner.py  map_utils.py  route_generator.py
carla_gym/engine/observation/: base.py  manager.py  obs_manager_handler.py
carla_gym/engine/observation/actor_state/: control.py  route.py  speed.py  velocity.py
carla_gym/engine/observation/birdview/: chauffeurnet.py
carla_gym/engine/observation/camera/: rgb.py
carla_gym/engine/observation/navigation/: gnss.py  waypoint_plan.py
carla_gym/engine/observation/object_finder/: ego.py  pedestrian.py  stop_sign.py  traffic_light_new.py  vehicle.py
carla_gym/envs/: __init__.py  carla_env.py  carla_env_old.py  leaderboard_scenario_loader.py  task_config.py
carla_gym/envs/suites/: dynamic_env.py
carla_gym/runtime/: carla_client.py  carla_runtime.py  carla_server.py
carla_gym/tools/: create_h5_map.py
carla_gym/utils/: config_utils.py  logger.py  traffic_light.py
carla_gym/wrappers/: simple_state_action_wrapper.py
scripts/: create_h5_maps.sh  install.sh
tests/: test_leaderboard_scenarios.py
